--- a/ir.ipynb
+++ b/ir.ipynb
@@ -8,6 +8,191 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.9.12\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package                       Version\n",
+      "----------------------------- -----------\n",
+      "absl-py                       1.1.0\n",
+      "aiohttp                       3.8.1\n",
+      "aiosignal                     1.2.0\n",
+      "argon2-cffi                   21.3.0\n",
+      "argon2-cffi-bindings          21.2.0\n",
+      "astunparse                    1.6.3\n",
+      "async-timeout                 4.0.2\n",
+      "attrs                         21.4.0\n",
+      "backcall                      0.2.0\n",
+      "backports.functools-lru-cache 1.6.4\n",
+      "beautifulsoup4                4.11.1\n",
+      "bleach                        5.0.0\n",
+      "blinker                       1.4\n",
+      "brotlipy                      0.7.0\n",
+      "cached-property               1.5.2\n",
+      "cachetools                    4.2.4\n",
+      "certifi                       2022.5.18.1\n",
+      "cffi                          1.15.0\n",
+      "charset-normalizer            2.0.12\n",
+      "click                         8.1.3\n",
+      "cryptography                  37.0.2\n",
+      "cycler                        0.11.0\n",
+      "Cython                        0.29.30\n",
+      "debugpy                       1.6.0\n",
+      "decorator                     5.1.1\n",
+      "defusedxml                    0.7.1\n",
+      "detecto                       1.2.2\n",
+      "entrypoints                   0.4\n",
+      "fastjsonschema                2.15.3\n",
+      "filelock                      3.7.1\n",
+      "flatbuffers                   1.12\n",
+      "flit_core                     3.7.1\n",
+      "fonttools                     4.33.3\n",
+      "frozenlist                    1.3.0\n",
+      "gast                          0.4.0\n",
+      "gdown                         4.4.0\n",
+      "google-auth                   1.35.0\n",
+      "google-auth-oauthlib          0.4.6\n",
+      "google-pasta                  0.2.0\n",
+      "grpcio                        1.43.0\n",
+      "h5py                          3.6.0\n",
+      "idna                          3.3\n",
+      "importlib-metadata            4.11.3\n",
+      "importlib-resources           5.7.1\n",
+      "ipykernel                     6.4.2\n",
+      "ipython                       7.33.0\n",
+      "ipython-genutils              0.2.0\n",
+      "ipywidgets                    7.7.0\n",
+      "jedi                          0.18.1\n",
+      "Jinja2                        3.1.2\n",
+      "joblib                        1.1.0\n",
+      "jsonschema                    4.5.1\n",
+      "jupyter-client                7.3.0\n",
+      "jupyter-core                  4.9.2\n",
+      "jupyterlab-pygments           0.2.2\n",
+      "jupyterlab-widgets            1.1.0\n",
+      "keras                         2.9.0\n",
+      "Keras-Preprocessing           1.1.2\n",
+      "keras-resnet                  0.2.0\n",
+      "keras-retinanet               1.0.0\n",
+      "kiwisolver                    1.4.2\n",
+      "lfm                           3.1\n",
+      "libclang                      14.0.1\n",
+      "Markdown                      3.3.7\n",
+      "MarkupSafe                    2.1.1\n",
+      "matplotlib                    3.5.2\n",
+      "matplotlib-inline             0.1.3\n",
+      "mistune                       0.8.4\n",
+      "multidict                     6.0.2\n",
+      "nbclient                      0.6.2\n",
+      "nbconvert                     6.5.0\n",
+      "nbformat                      5.4.0\n",
+      "nest-asyncio                  1.5.5\n",
+      "notebook                      6.4.11\n",
+      "numpy                         1.22.3\n",
+      "oauthlib                      3.2.0\n",
+      "opencv-python                 4.6.0.66\n",
+      "opt-einsum                    3.3.0\n",
+      "packaging                     21.3\n",
+      "pandas                        1.4.2\n",
+      "pandocfilters                 1.5.0\n",
+      "parso                         0.8.3\n",
+      "pexpect                       4.8.0\n",
+      "pickleshare                   0.7.5\n",
+      "Pillow                        9.1.1\n",
+      "pip                           21.2.4\n",
+      "progressbar2                  4.0.0\n",
+      "prometheus-client             0.14.1\n",
+      "prompt-toolkit                3.0.29\n",
+      "protobuf                      3.19.4\n",
+      "ptyprocess                    0.7.0\n",
+      "pyasn1                        0.4.8\n",
+      "pyasn1-modules                0.2.7\n",
+      "pycparser                     2.21\n",
+      "Pygments                      2.12.0\n",
+      "PyJWT                         2.4.0\n",
+      "pyOpenSSL                     22.0.0\n",
+      "pyparsing                     3.0.8\n",
+      "pyrsistent                    0.18.1\n",
+      "PySocks                       1.7.1\n",
+      "python-dateutil               2.8.2\n",
+      "python-utils                  3.3.3\n",
+      "pytz                          2022.1\n",
+      "pyu2f                         0.1.5\n",
+      "pyzmq                         22.3.0\n",
+      "requests                      2.27.1\n",
+      "requests-oauthlib             1.3.1\n",
+      "rsa                           4.8\n",
+      "scikit-learn                  1.1.1\n",
+      "scipy                         1.8.1\n",
+      "seaborn                       0.11.2\n",
+      "Send2Trash                    1.8.0\n",
+      "setuptools                    62.1.0\n",
+      "simple-image-download         0.2\n",
+      "six                           1.16.0\n",
+      "sklearn                       0.0\n",
+      "soupsieve                     2.3.1\n",
+      "tensorboard                   2.9.1\n",
+      "tensorboard-data-server       0.6.0\n",
+      "tensorboard-plugin-wit        1.8.1\n",
+      "tensorflow                    2.7.1\n",
+      "tensorflow-estimator          2.9.0\n",
+      "tensorflow-gpu                2.9.1\n",
+      "tensorflow-io-gcs-filesystem  0.26.0\n",
+      "termcolor                     1.1.0\n",
+      "terminado                     0.13.3\n",
+      "threadpoolctl                 3.1.0\n",
+      "tinycss2                      1.1.1\n",
+      "torch                         1.11.0\n",
+      "torchvision                   0.12.0\n",
+      "tornado                       6.1\n",
+      "tqdm                          4.64.0\n",
+      "traitlets                     5.1.1\n",
+      "typing_extensions             4.2.0\n",
+      "urllib3                       1.26.9\n",
+      "wcwidth                       0.2.5\n",
+      "webencodings                  0.5.1\n",
+      "Werkzeug                      2.1.2\n",
+      "wheel                         0.37.1\n",
+      "widgetsnbextension            3.6.0\n",
+      "wrapt                         1.14.1\n",
+      "yarl                          1.7.2\n",
+      "zipp                          3.8.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip list"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "9Ds9xP7rtnrZ"
